[package]
name = "complex_continuous_wavelet_transform"
version = "0.1.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
description = "Complex Continuous Wavelet Transform"
keywords = ["cwt", "wavelet"]
repository = "https://github.com/Lichtso/complex_continuous_wavelet_transform"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.5"
rustfft = "3.0.0"
